force-app/main/default/objects/Expense__c/fields/District_In_charge__c.field-meta.xml
<CustomField>
    <fullName>District_In_charge__c</fullName>
    <formula>Owner:User.District_In_charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District In-charge</label>
    <type>Checkbox</type>
</CustomField>