force-app/main/default/objects/Expense__c/fields/Executive_Band__c.field-meta.xml
<CustomField>
    <fullName>Executive_Band__c</fullName>
    <formula>Text(Owner:User.Band__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Band</label>
    <type>Text</type>
</CustomField>