force-app/main/default/objects/Expense__c/fields/Executive_Designation__c.field-meta.xml
<CustomField>
    <fullName>Executive_Designation__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Designation</label>
    <type>Text</type>
</CustomField>