force-app/main/default/objects/Expense__c/fields/Executive_Profile__c.field-meta.xml
<CustomField>
    <fullName>Executive_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Profile</label>
    <type>Text</type>
</CustomField>