force-app/main/default/objects/Expense__c/fields/Expense_Approver_L2__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approver_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>