force-app/main/default/objects/Expense__c/fields/Expense_Finance_Department_Approver__c.field-meta.xml
<CustomField>
    <fullName>Expense_Finance_Department_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Finance Department Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses4</relationshipName>
    <type>Lookup</type>
</CustomField>