force-app/main/default/objects/Expense__c/fields/Expense_L1_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_L1_Approver_Name__c</fullName>
    <label>Expense L1 Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>