force-app/main/default/objects/Expense__c/fields/Is_Approval_Pending_Expenses_Existed__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Pending_Expenses_Existed__c</fullName>
    <formula>OR(
    AND(
        Expense_Approver_L1__c = $User.Id,
        L1_Approval_Pending_Amount__c &gt; 0
    ),
    AND(
        ISBLANK(Expense_Approver_L1__c),
        NOT(ISBLANK(Expense_Finance_Department_Approver__c)),
        Expense_Finance_Department_Approver__c = $User.Id,
        L1_Approval_Pending_Amount__c &gt; 0
    ),
    AND(
        Expense_Finance_Department_Approver__c = $User.Id,
        L2_Approval_Pending_Amount__c &gt; 0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approval Pending Expenses Existed</label>
    <type>Checkbox</type>
</CustomField>