force-app/main/default/objects/Expense__c/fields/L2_Approval_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>L2_Approval_Pending_Amount__c</fullName>
    <label>L2 Approval Pending Amount</label>
    <summarizedField>Expenses_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expenses_Line_Item__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Level 1 Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Expenses_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>