force-app/main/default/objects/Expense__c/fields/Other_Misc_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Misc_Expense_Amount__c</fullName>
    <label>Other/Misc Expense Amount</label>
    <summarizedField>Expenses_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expenses_Line_Item__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Other/MISC</value>
    </summaryFilterItems>
    <summaryForeignKey>Expenses_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>