force-app/main/default/objects/Expense__c/fields/Total_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Amount__c</fullName>
    <formula>TA_Amount__c + DA_Amount__c + Local_Conveyance_Amount__c + Other_Misc_Expense_Amount__c 
+ Courier_Charges__c + Mobile_Charges__c + Food_Expense_Amount__c + Lodging_Expense_Amount__c + Transport_Conveyance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>