force-app/main/default/objects/Expense__c/fields/Transport_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Conveyance__c</fullName>
    <label>Transport Conveyance</label>
    <summarizedField>Expenses_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expenses_Line_Item__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Transport Conveyance</value>
    </summaryFilterItems>
    <summaryForeignKey>Expenses_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>