force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive_Band__c</columns>
    <columns>Executive_Name__c</columns>
    <columns>Expense_Approver_L1__c</columns>
    <columns>Expense_Finance_Department_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>