force-app/main/default/objects/Expense__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Executive_Name__c</columns>
    <columns>Expense_Approver_L1__c</columns>
    <columns>Expense_Finance_Department_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Approval_Pending_Expenses_Existed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approval Pending Expenses</label>
</ListView>