force-app/main/default/objects/Expense__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Expense_Approver_L1__c</columns>
    <columns>Expense_Finance_Department_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>This Month</label>
</ListView>